Alignments UI minor fixes

--- a/Frontend/public/stylesheets/bdi_style.css
+++ b/Frontend/public/stylesheets/bdi_style.css
@@ -23,3 +23,6 @@ table {
 .badge-margin {
     margin-left: 10px;
 }
+.remove-top-padding{
+    padding-top: 0px;
+}
